vbnc/vbnc/tests/Errors/30530-1.vb
MustInherit Class ArgumentTypeInference
    Sub a(ByVal a As Integer)

    End Sub
    MustOverride Function b(ByVal b As Integer) As Integer
End Class